backend-app/ingress/domain-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.syamsul.online"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-vs
spec:
  hosts:
  # - "*.syamsul.online"
  - "url.syamsul.online"
  - "jaeger.syamsul.online"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
      headers:
        host:
          exact: "url.syamsul.online"
    route:
    - destination:
        host: url-shortener-clusterip
        port:
          number: 10000
  - match:
    - uri:
        prefix: /
      headers:
        host:
          exact: "jaeger.syamsul.online"
    route:
    - destination:
        host: jaeger-clusterip.obs.svc.cluster.local
        port:
          number: 16686


# curl -v -H "Host: url.syamsul.online" http://a8bf107b1662b41fe8b69a4363827310-1058936761.ap-southeast-1.elb.amazonaws.com
